# libcachesim

./: .gitignore  CMakeLists.txt  README.md
data/: README.md
example/cacheHierarchy/: CMakeLists.txt  README.md  myconfig.cpp  myconfig.hpp  simulator.cpp
example/cacheHierarchy/fkYAML/: node.hpp
libCacheSim/cache/: CMakeLists.txt  cache.c  plugin.c
libCacheSim/cache/admission/: CMakeLists.txt  bloomfilter.c  prob.c  size.c  sizeProbabilistic.c
libCacheSim/cache/admission/adaptsize/: adaptsize.cpp  adaptsize.h  adaptsize_interface.cpp
libCacheSim/cache/eviction/: ARC.c  ARCv0.c  Belady.c  BeladySize.c  CAR.c  CMakeLists.txt  CR_LFU.c  ClockPro.c  FIFO.c  FIFO_Merge.c  FIFO_Reinsertion.c  Hyperbolic.c  LFU.c  LFUDA.c  LIRS.c  LeCaR.c  QDLP.c  RandomLRU.c  S3FIFO.c  S3FIFOd.c  S3FIFOv0.c  SLRU.c  SLRUv0.c  SR_LRU.c  Size.c  TwoQ.c  WTinyLFU.c
libCacheSim/cache/eviction/3LCache/: ThreeLCache.cpp  ThreeLCache.h  ThreeLCache_Interface.cpp  cache.h  utils.hpp
libCacheSim/cache/eviction/GLCache/: GLCacheInternal.h  dataPrep.c  eviction.c  inference.c  init.c  segment.c
libCacheSim/cache/eviction/LHD/: lhd.hpp
libCacheSim/cache/eviction/LRB/: LRB_Interface.cpp  lrb.cpp  lrb.h
libCacheSim/cache/eviction/PQEvolve/: History.h  PQEvolve.cpp  PQEvolve.h  PQEvolveInterface.cpp  Percentile.h
libCacheSim/cache/eviction/cpp/: GDSF.cpp  LFU.cpp  abstractRank.hpp
libCacheSim/cache/eviction/fifo/: LP_ARC.c  LP_SFIFO.c  LP_TwoQ.c  SFIFO.c
libCacheSim/cache/eviction/other/: S3LRU.c  flashProb.c
libCacheSim/cache/prefetch/: Mithril.c  OBL.c  PG.c
scripts/: debug.sh  (+4 more)
(+72 files in other folders)
